Fix storage of additional institution attributes in SQL backend

BUG: 413325
FIXED-IN: 5.0.8